--- a/runelite-client/pom.xml
+++ b/runelite-client/pom.xml
@@ -296,6 +296,16 @@
 			<version>3.14.9</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.ow2.asm</groupId>
+			<artifactId>asm</artifactId>
+			<version>9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.ow2.asm</groupId>
+			<artifactId>asm-commons</artifactId>
+			<version>9.2</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
